--- a/blog 2.html
+++ b/blog 2.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página home</h1>
-    <a href="Vendas.html">Ir para a página de vendas</a>
-    <a href="blog 2.html">Ir para a página de blog</a>
+    <h1>Página de Blog</h1>
+    <h2>Post número 1</h2>
+    <a href="index.html">Voltar para a página de inicial</a>
 </body>
 </html>
